结果页，右侧相关推荐部分，改成块状布局

--- a/src/pages/query/components/ReferenceBook/index.less
+++ b/src/pages/query/components/ReferenceBook/index.less
@@ -35,7 +35,7 @@
   .ReferenceBook_extra {
     text-align: right;
     .ReferenceBook_name {
-      // color: #999;
+      color: #c4c4c4;
       cursor: pointer;
       &:hover {
         color: lightsalmon;
