完成个人中心开发

--- a/src/layouts/BasicLayout.less
+++ b/src/layouts/BasicLayout.less
@@ -32,7 +32,7 @@
         vertical-align: top;
         color: #fff;
         height: 38px;
-        width: 175px;
+        // width: 175px;
         left: calc(50% - 600px);
         text-align: right;
         margin-right: 10px;
@@ -114,6 +114,15 @@
         top: 50%;
         margin-top: -15px;
         color: #fff;
+        .tips{
+          .links{
+            color: #fff;
+            margin-left: 4px;
+            &:hover{
+              text-decoration: underline;
+            }
+          }
+        }
         .login_btn,
         .register_btn {
           height: 30px;
@@ -132,7 +141,7 @@
           }
           &:hover {
             background: #fff;
-            // color: #333;
+            color: #333;
             a{
               color: #333;
             }
