--- a/src/layouts/HomeLayout.less
+++ b/src/layouts/HomeLayout.less
@@ -33,9 +33,18 @@
         }
         &:hover {
           // background: #fff;
-          // color: #333;
+          color: #333;
           a {
             color: #333;
+          }
+        }
+      }
+      .tips{
+        .links{
+          color: #fff;
+          margin-left: 4px;
+          &:hover{
+            text-decoration: underline;
           }
         }
       }
