1.新增异步加载loading组件，及时响应路由改变时，页面加载过程。 2.修改登陆注册组件逻辑，可以单独响应登录和注册按钮，而不是必须把登录注册按钮揉在一起。 3.修复专题页，菜单展开关闭样式问题，样式上还需要进一步优化

--- a/src/layouts/BasicLayout.less
+++ b/src/layouts/BasicLayout.less
@@ -136,15 +136,11 @@
           border-radius: 4px;
           margin-left: 20px;
           cursor: pointer;
-          a{
-            color: #fff;
-          }
+          
           &:hover {
             background: #fff;
-            color: #333;
-            a{
-              color: #333;
-            }
+            color: #29a7f3;
+           
           }
         }
       }
