--- a/src/layouts/HomeLayout.less
+++ b/src/layouts/HomeLayout.less
@@ -28,22 +28,17 @@
         border-radius: 4px;
         margin-left: 20px;
         cursor: pointer;
-        a {
-          color: #fff;
-        }
         &:hover {
-          // background: #fff;
-          color: #333;
-          a {
-            color: #333;
-          }
+          background: #fff;
+          color: #29a7f3;
         }
       }
-      .tips{
-        .links{
+
+      .tips {
+        .links {
           color: #fff;
           margin-left: 4px;
-          &:hover{
+          &:hover {
             text-decoration: underline;
           }
         }
