--- a/src/pages/special/index.less
+++ b/src/pages/special/index.less
@@ -80,7 +80,18 @@
     margin: 0 auto;
     .menu {
       // height: 400px;
-      padding-top: 40px;
+      // padding-top: 40px;
+      :global(.ant-menu-item){
+        margin-top: 0;
+        // margin-bottom: 0;
+      }
+      :global(.ant-menu-submenu-title){
+        margin-top: 0;
+        margin-bottom: 0;
+      }
+      :global(.ant-menu-item:last-child){
+        margin-bottom: 0;
+      }
     }
     .content {
       // height: 400px;
