--- a/src/pages/query/components/SgList/index.less
+++ b/src/pages/query/components/SgList/index.less
@@ -2,14 +2,18 @@
   .wrapper {
     box-shadow: #cecece 0 0 6px 0;
     margin-bottom: 20px;
-    padding: 20px;
+    padding: 10px 20px;
     background: #fff;
     word-break: break-all;
     word-wrap: break-word;
   }
+  :global(.ant-list-item){
+    padding: 6px 0;
+  }
   :global(.ant-list-footer){
     overflow: hidden;
     padding-bottom: 0;
+    padding-top: 6px;
   }
   .fontStyle {
     color: #333;
