优化开放域，网友回答，faq，句型覆盖等组件的查看更多与收起功能

--- a/src/pages/query/components/Sentence/index.less
+++ b/src/pages/query/components/Sentence/index.less
@@ -27,16 +27,17 @@
         position: fixed;
         bottom: 0;
         z-index: 2;
-        width: 741px;
-        left: 29.2%;
-        // right: 27%;
+        width: 743px;
+        // transform: translateX(-50%);
+        margin-left: -397px;
+        left: 50%;
+        border: 1px solid rgba(170,220,255,1);
         height: 40px;
         padding: 10px;
         background: #fff;
-        box-shadow: 0 -1px 3px rgba(26, 26, 26, 0.4);
         text-align: center;
         line-height: 20px;
-        color: #646464;
+        color: #0097FF;
       }
     }
     .Sentence_extra {
