根据后台api的修改,完成组件的调整

--- a/src/pages/query/components/Poem/index.less
+++ b/src/pages/query/components/Poem/index.less
@@ -20,7 +20,7 @@
       font-size: 14px;
       line-height: 24px;
       margin: 3px;
-      background-color: gainsboro;
+      // background-color: gainsboro;
     }
   }
   .more{
