--- a/src/pages/query/components/Graphic.less
+++ b/src/pages/query/components/Graphic.less
@@ -14,6 +14,10 @@
   .answer_item{
     padding: 10px;
     border-bottom: 1px dotted lightsalmon;
+    img{
+      width: 50%;
+      height: auto;
+    }
   }
   h3{
     font-weight: 800;
