--- a/src/pages/query/components/ToolsBook/index.less
+++ b/src/pages/query/components/ToolsBook/index.less
@@ -16,7 +16,7 @@
         color: #333;
         letter-spacing: 2px;
         line-height: 27.2px;
-        text-indent: 2em;
+        // text-indent: 2em;
         margin-bottom: 20px;
         text-align: left;
        
