--- a/src/pages/home/index.less
+++ b/src/pages/home/index.less
@@ -6,7 +6,7 @@
     height: 416px;
     padding-top: 50px;
     position: relative;
-    margin-bottom: 60px;
+    margin-bottom: 70px;
     .left {
       float: left;
       height: 100%;
@@ -17,7 +17,7 @@
       .bg {
         width: 400px;
         height: 320px;
-        :global(.slick-list){
+        :global(.slick-list) {
           border-radius: 10px;
         }
       }
@@ -113,13 +113,13 @@
     }
   }
   .special {
-    // height: 380px;
-    // width: 1200px;
-    margin: 10px auto;
+    margin: 20px auto 10px;
     .special_top {
       width: 100%;
       height: 45px;
       margin-bottom: 40px;
+      width: 1200px;
+      margin: 0 auto;
       .title {
         float: left;
       }
@@ -146,10 +146,10 @@
         background-color: #1890ff;
         color: #fff;
       }
-      :global(.ant-tabs-bar){
+      :global(.ant-tabs-bar) {
         border-bottom: none;
       }
-      :global(.ant-tabs-card-bar .ant-tabs-nav-wrap){
+      :global(.ant-tabs-card-bar .ant-tabs-nav-wrap) {
         margin-right: calc(50% - 650px);
       }
       // :global(.slick-slider) {
@@ -184,16 +184,15 @@
         margin: 0 auto;
         // margin-left: 3%;
         box-sizing: border-box;
-        :global(.slick-list){
+        :global(.slick-list) {
           padding: 20px 0 !important;
         }
         :global(.slick-slide) {
           transform: scale(0.9);
-          box-shadow: 0px 0px 32px 0px rgba(0,78,255,0.2);
+          box-shadow: 0px 0px 32px 0px rgba(0, 78, 255, 0.2);
           // box-shadow:2px 2px 0px 2px rgba(0,78,255,0.2);
           // border: 1px solid #eee;
           padding: 0 !important;
-          
         }
         :global(.slick-center) {
           transform: scale(1.05);
@@ -218,7 +217,6 @@
             padding: 20px 20px 10px;
           }
           .questions {
-        
             color: rgb(35, 36, 42);
             font-size: 15px;
             font-weight: 400;
@@ -244,7 +242,7 @@
       .special_help {
         width: 1200px;
         margin: 0px auto;
-        padding: 10px 0 210px 0;
+        padding: 10px 0 0 0;
         overflow: hidden;
         // padding: 10px 0 !important;
         .help_more {
@@ -295,6 +293,67 @@
               &:hover {
                 color: lightsalmon;
               }
+            }
+          }
+        }
+      }
+    }
+  }
+  .experience {
+    width: 1200px;
+    margin: 40px auto;
+    overflow: hidden;
+    .title{
+      padding-bottom: 40px;
+    }
+    .content {
+      padding: 20px 40px;
+      .left {
+        float: left;
+        margin-right: 66px;
+        img {
+          width: 560px;
+        }
+      }
+      .right {
+        overflow: hidden;
+        width: 442px;
+        height: 340px;
+        margin-top: 40px;
+        padding-top: 40px;
+        padding-left: 40px;
+        background-color: #fff;
+        box-shadow: 0px 0px 16px 0px rgba(105, 105, 105, 0.16);
+        border-radius: 8px;
+        background-image: url(../../assets/person.png);
+        background-repeat: no-repeat;
+        background-position: 100% 100%;
+        .cnTitle {
+          font-size: 24px;
+          font-weight: 400;
+          color: #23242a;
+        }
+        .enTitle {
+          font-size: 16px;
+          font-family: Microsoft YaHei;
+          font-weight: 400;
+          color: rgba(196, 196, 196, 1);
+          margin-bottom: 16px;
+        }
+        .questions {
+          font-size: 16px;
+          font-family: Microsoft YaHei;
+          font-weight: 400;
+          color: #797979;
+          .questions_item {
+            overflow: hidden;
+            text-overflow: ellipsis;
+            white-space: nowrap;
+            color: #797979;
+            line-height: 32px;
+            display: block;
+            &:hover {
+              color: lightsalmon;
             }
           }
         }
