完成社区整改，20%

--- a/src/pages/home/index.less
+++ b/src/pages/home/index.less
@@ -305,6 +305,7 @@
     overflow: hidden;
     .title{
       padding-bottom: 40px;
+      
     }
     .content {
       padding: 20px 40px;
@@ -332,6 +333,9 @@
           font-size: 24px;
           font-weight: 400;
           color: #23242a;
+          &:hover{
+            text-decoration: underline;
+          }
         }
         .enTitle {
           font-size: 16px;
@@ -339,6 +343,9 @@
           font-weight: 400;
           color: rgba(196, 196, 196, 1);
           margin-bottom: 16px;
+          &:hover{
+            text-decoration: underline;
+          }
         }
         .questions {
           font-size: 16px;
