--- a/src/pages/home/index.less
+++ b/src/pages/home/index.less
@@ -332,6 +332,10 @@
           font-size: 24px;
           font-weight: 400;
           color: #23242a;
+          cursor: pointer;
+          &:hover{
+            text-decoration: underline;
+          }
         }
         .enTitle {
           font-size: 16px;
@@ -339,6 +343,10 @@
           font-weight: 400;
           color: rgba(196, 196, 196, 1);
           margin-bottom: 16px;
+          cursor: pointer;
+            &:hover{
+            text-decoration: underline;
+          }
         }
         .questions {
           font-size: 16px;
