--- a/src/pages/query/components/Poem/index.less
+++ b/src/pages/query/components/Poem/index.less
@@ -14,10 +14,11 @@
     }
     .poem_content {
       padding: 4px;
-      text-indent: 1em;
       letter-spacing: 2px;
       color: rebeccapurple;
       font-size: 14px;
+      font-family: 'SimSun';
+      font-weight: 400;
       line-height: 24px;
       margin: 3px;
       // background-color: gainsboro;
