修改工具书中标签为small的字体大小

--- a/src/pages/query/components/ToolsBook/index.less
+++ b/src/pages/query/components/ToolsBook/index.less
@@ -14,10 +14,11 @@
         color: #333;
         letter-spacing: 2px;
         line-height: 27.2px;
-        // text-indent: 2em;
-        // font-family: 'NSimSun';s
         margin-bottom: 20px;
         text-align: left;
+        small{
+          font-size: 14px;
+        }
        
         img{
           width: 15%;
