--- a/src/pages/reply/index.less
+++ b/src/pages/reply/index.less
@@ -15,19 +15,36 @@
     }
     .replyCount {
       color: #999;
-     
     }
     .answerItem {
       background-color: #fff;
-      border-bottom: 1px solid #ccc;
-      // padding: 20px;
-      border-radius: 4px;
+      border-bottom: 1px solid #eee;
+      padding: 10px;
+      :last-child{
+        border-bottom: none;
+      }
+      .answerAvatar {
+        padding: 10px 0;
+      }
       .itemTitle {
         font-size: 15px;
         color: #333;
         letter-spacing: 2px;
         line-height: 27.2px;
-        text-indent: 2em;
+      }
+      .operation {
+        color: #8590a6;
+        .likeBtn {
+          cursor: pointer;
+          background: #ebf7ff;
+          color: #0095ff;
+          border: none;
+          padding: 4px 8px;
+        }
+        .action{
+          margin-left: 20px;
+          cursor: pointer;
+        }
       }
     }
 
