--- a/src/pages/reply/index.less
+++ b/src/pages/reply/index.less
@@ -19,8 +19,8 @@
     .answerItem {
       background-color: #fff;
       border-bottom: 1px solid #eee;
-      padding: 10px;
-      :last-child{
+      padding: 16px;
+      :last-child {
         border-bottom: none;
       }
       .answerAvatar {
@@ -34,6 +34,7 @@
       }
       .operation {
         color: #8590a6;
+        margin-bottom: 10px;
         .likeBtn {
           cursor: pointer;
           background: #ebf7ff;
@@ -41,10 +42,13 @@
           border: none;
           padding: 4px 8px;
         }
-        .action{
+        .action {
           margin-left: 20px;
           cursor: pointer;
         }
+      }
+      .commentList {
+        width: 80%;
       }
     }
 
