--- a/src/pages/reply/index.less
+++ b/src/pages/reply/index.less
@@ -49,6 +49,8 @@
       }
       .commentList {
         width: 80%;
+        padding: 20px;
+        box-shadow: rgba(216, 216, 216, 0.76) 0px 0px 5px 0px;
       }
     }
 
