--- a/src/pages/reply/index.less
+++ b/src/pages/reply/index.less
@@ -42,8 +42,13 @@
           cursor: pointer;
           background: #ebf7ff;
           color: #0095ff;
+          outline: none;
           border: none;
           padding: 4px 8px;
+          &:focus{
+            border:none;
+            outline: none;
+          }
         }
         .action {
           margin-left: 20px;
