--- a/src/pages/reply/index.less
+++ b/src/pages/reply/index.less
@@ -25,6 +25,10 @@
       :global(.ant-list-vertical .ant-list-item-meta){
         margin-bottom: 0;
       }
+
+      .followBtn{
+        padding-top: 10px;
+      }
     
       .answerAvatar {
         padding: 10px 0;
