社区页面组件封装，userInfo组件优化

--- a/src/global.less
+++ b/src/global.less
@@ -4,10 +4,17 @@ body,
   height: 100%;
 }
 
+html {
+  overflow-y: auto;
+  overflow-x: hidden;
+}
+
 body {
   margin: 0;
+  width: 100vw;
 }
-.slick-prev:before,.slick-next:before{
+.slick-prev:before,
+.slick-next:before {
   content: '' !important;
 }
 
@@ -66,100 +73,99 @@ body {
 }
 
 /*display*/
-.display_flex{
+.display_flex {
   display: -webkit-box;
   display: -ms-flexbox;
   display: -webkit-flex;
   display: flex;
 }
-.display_flex > *{
+.display_flex > * {
   display: block;
 }
-.display_inline-flex{
+.display_inline-flex {
   display: -webkit-inline-box;
   display: -ms-inline-flexbox;
   display: -webkit-inline-flex;
-  display: inline-flex;    
+  display: inline-flex;
 }
-.display_inline-flex > *{
+.display_inline-flex > * {
   display: block;
 }
 /*伸缩流方向*/
-.flex-direction_column{
+.flex-direction_column {
   -webkit-box-orient: vertical;
   -ms-flex-direction: column;
   -webkit-flex-direction: column;
   flex-direction: column;
 }
 /*主轴对齐*/
-.justify-content_flex-center{
+.justify-content_flex-center {
   -webkit-box-pack: center;
   -ms-flex-pack: center;
   -webkit-justify-content: center;
   justify-content: center;
 }
-.justify-content_flex-end{
+.justify-content_flex-end {
   -webkit-box-pack: end;
   -ms-flex-pack: end;
   -webkit-justify-content: flex-end;
   justify-content: flex-end;
 }
-.justify-content_flex-justify{
+.justify-content_flex-justify {
   -webkit-box-pack: justify;
   -ms-flex-pack: justify;
   -webkit-justify-content: space-between;
   justify-content: space-between;
 }
 /*侧轴对齐*/
-.align-items_flex-start{
+.align-items_flex-start {
   -webkit-box-align: start;
   -ms-flex-align: start;
   -webkit-align-items: flex-start;
   align-items: flex-start;
 }
-.align-items_flex-end{
+.align-items_flex-end {
   -webkit-box-align: end;
   -ms-flex-align: end;
   -webkit-align-items: flex-end;
   align-items: flex-end;
 }
-.align-items_center{
+.align-items_center {
   -webkit-box-align: center;
   -ms-flex-align: center;
   -webkit-align-items: center;
   align-items: center;
 }
-.align-items_baseline{
+.align-items_baseline {
   -webkit-box-align: baseline;
   -ms-flex-align: baseline;
   -webkit-align-items: baseline;
   align-items: baseline;
 }
 /*伸缩性*/
-.flex_auto{
+.flex_auto {
   -webkit-box-flex: 1;
   -ms-flex: auto;
   -webkit-flex: auto;
   flex: auto;
 }
-.flex_1{
+.flex_1 {
   width: 0;
   -webkit-box-flex: 1;
   -ms-flex: 1;
   -webkit-flex: 1;
-  flex: 1;    
+  flex: 1;
 }
 /*显示顺序*/
-.order_2{
+.order_2 {
   -webkit-box-ordinal-group: 2;
   -ms-flex-order: 2;
   -webkit-order: 2;
   order: 2;
 }
-.order_3{
+.order_3 {
   -webkit-box-ordinal-group: 3;
   -ms-flex-order: 3;
   -webkit-order: 3;
   order: 3;
 }
-
