消息通知组件，法律法规组件的开发

--- a/src/global.less
+++ b/src/global.less
@@ -9,14 +9,14 @@ html {
   overflow-x: hidden;
 }
 
-header{
-  overflow-y: auto;
-  overflow-x: hidden;
-}
 
 body {
   margin: 0;
   width: 100vw;
+}
+
+p{
+  margin-bottom: 0;
 }
 .slick-prev:before,
 .slick-next:before {
