--- a/src/pages/reply/index.less
+++ b/src/pages/reply/index.less
@@ -41,7 +41,7 @@
       }
       .operation {
         color: #8590a6;
-        margin-bottom: 10px;
+        margin: 10px 0;
         .likeBtn {
           cursor: pointer;
           background: #ebf7ff;
