头像组件更新游客身份支持。 折叠文本组件更新支持记录当前文本的滚动位置，收起时可以回归到原来的位置。 消息盒子组件修复关注点击逻辑。 社区问题列表新增头像支持。 社区UserInfo组件bug修复。 其他诸多问题修复。

--- a/src/pages/query/components/LawCase/index.less
+++ b/src/pages/query/components/LawCase/index.less
@@ -1,7 +1,7 @@
 .LawCase {
     box-shadow: #cecece 0 0 6px 0;
     margin-bottom: 20px;
-    padding: 20px;
+    padding: 0 20px 20px;
     background: #fff;
     .fullContent {
       color: #333;
