--- a/src/pages/query/components/LawItem/index.less
+++ b/src/pages/query/components/LawItem/index.less
@@ -1,12 +1,14 @@
 .LawItem {
     box-shadow: #cecece 0 0 6px 0;
     margin-bottom: 20px;
-    padding: 20px;
+    padding: 0 20px 20px 20px;
     background: #fff;
     .fullContent {
-      color: #333;
+      color: #000;
       letter-spacing: 2px;
       line-height: 27.2px;
+      padding: 0 10px;
+      background-color: rgba(233,233,233,.5);
       // text-indent: 2em;
     }
     .otherInfo {
