智能头像组件添加关注按钮支持。 新增提问弹窗组件，支持在其他页面提问

--- a/src/components/SmartInput/index.less
+++ b/src/components/SmartInput/index.less
@@ -21,7 +21,7 @@
     background: #0BB3FF;
     // font-weight: bold;
     height: 50px;
-    width: 78px;
+    // width: 78px;
     font-size: 20px;
     border: none;
     // margin-left: 10px;
