--- a/src/layouts/BasicLayout.less
+++ b/src/layouts/BasicLayout.less
@@ -29,9 +29,7 @@
         }
       }
       .logo {
-        // background: url(../assets/lo.png) no-repeat;
-        // margin-left: 50px;
-        // padding-left: calc(50% - 600px);
+    
         vertical-align: top;
         color: #fff;
         height: 38px;
@@ -76,9 +74,10 @@
         left: calc(50% - 390px);
         top: 50%;
         margin-top: -20px;
-        width: 35%;
+        width: 38%;
+   
         :global(.record-wrap){
-          width: calc(100% - 88px);
+          width: calc(100% - 214px);
         }
         :global(.ant-input-lg){
           height: 40px;
@@ -89,26 +88,22 @@
           height: 40px;
           background-color: #0084FF;
           margin-left: 10px;
-          font-size: 20px;
+          font-size: 16px;
           
         }
         button {
           border: 1px solid #fff;
+          &:hover{
+            border-color: rgba(255, 255, 255, 0.5);
+          }
         }
-        button:active{
-          // -webkit-box-shadow: 0px 2px 0px #84261a;
-          // -moz-box-shadow: 0px 2px 0px #84261a;
-          // box-shadow: 0px 2px 0px #84261a;
-          // position:relative;
-          // top:2px;
+        .askBtn{
+          font-size: 16px;
+          color: #fff;
+          height: 40px;
+          margin-left: 10px;
         }
-        // button:active{
-        //   -webkit-box-shadow: 0px 2px 0px #84261a;
-        //   -moz-box-shadow: 0px 2px 0px #84261a;
-        //   box-shadow: 0px 2px 0px #84261a;
-        //   position:relative;
-        //   top:2px;
-        // }
+       
       }
       .login {
         float: right;
