修改首页按钮样式

--- a/src/pages/home/index.less
+++ b/src/pages/home/index.less
@@ -247,12 +247,16 @@
         // padding: 10px 0 !important;
         .help_more {
           cursor: pointer;
-          width: 100;
+          width: 100px;
+          height: 36px;
           float: right;
-          color: #1890ff;
+          color: #fff;
           font-size: 16px;
+          line-height: 36px;
+          text-align: center;
+          background: linear-gradient(90deg, #89DCE4, #79C1EA);
           &:hover {
-            color: lightsalmon;
+            opacity: 0.8;
           }
         }
         .help_left {
