--- a/src/components/SmartInput/inputRecord.less
+++ b/src/components/SmartInput/inputRecord.less
@@ -1,5 +1,8 @@
 .record-list {
-  border: 1px solid #d9d9d9;
+  // border: 1px solid #d9d9d9;
+  box-shadow: 0 0 0 1px rgba(0,0,0,.1), 0 2px 4px 1px rgba(0,0,0,.18);
+  border-bottom-left-radius: 6px;
+  border-bottom-right-radius: 6px;
   // max-height: 300px;
   // overflow-y: scroll;
   :global(.ant-list-item) {
