修复折叠文本组件bug，优化反馈按钮交互

--- a/src/layouts/HomeLayout.less
+++ b/src/layouts/HomeLayout.less
@@ -112,4 +112,24 @@
       }
     }
   }
+  .feedback {
+    height: 34px;
+    overflow: hidden;
+    display: block;
+    border-radius: 4px;
+    background: #ffffff;
+    color: #3474D9;
+    cursor: pointer;
+    box-shadow: 0px 0px 8px 0px rgba(105, 105, 105, 0.14);
+    transition: height 0.5s;
+    -webkit-transition: height 0.5s;
+    img {
+      padding: 6px 4px;
+      width: 30px;
+    }
+
+    &:hover,&:active,&:focus {
+      height: 56px;
+    }
+  }
 }
