--- a/src/layouts/BasicLayout.less
+++ b/src/layouts/BasicLayout.less
@@ -221,23 +221,32 @@
     }
   }
   .feedback {
-    height: 34px;
+    position: absolute;
+    right: 30px;
+    bottom: 60px;
+    padding: 6px;
     overflow: hidden;
     display: block;
     border-radius: 4px;
     background: #ffffff;
-    color: #3474D9;
+    color: #3474d9;
     cursor: pointer;
     box-shadow: 0px 0px 8px 0px rgba(105, 105, 105, 0.14);
-    transition: height 0.5s;
-    -webkit-transition: height 0.5s;
     img {
-      padding: 6px 4px;
       width: 30px;
     }
-
-    &:hover,&:active,&:focus {
-      height: 56px;
+    .buttonTxt {
+      display: none;
+      transition: display 1;
+      -webkit-transition: display 1s;
+    }
+    &:hover,
+    &:active,
+    &:focus {
+      // height: 56px;
+      .buttonTxt {
+        display: block;
+      }
     }
   }
 }
