--- a/src/components/WaitAnswer/index.less
+++ b/src/components/WaitAnswer/index.less
@@ -2,7 +2,7 @@
   background-color: #fff;
   padding: 20px;
   border-radius: 4px;
-  box-shadow: #cecece 0 0 6px 0;
+  // box-shadow: #cecece 0 0 2px 0;
   .header {
     padding-bottom: 10px;
     border-bottom: 1px solid #e6e6e6;
