结果页布局调整

--- a/src/global.less
+++ b/src/global.less
@@ -83,6 +83,7 @@ p{
   display: -ms-flexbox;
   display: -webkit-flex;
   display: flex;
+  flex-wrap: wrap;
 }
 .display_flex > * {
   display: block;
