update develop branch change

--- a/src/pages/query/components/NewHelp/index.less
+++ b/src/pages/query/components/NewHelp/index.less
@@ -5,7 +5,7 @@
   .title {
     padding-bottom: 10px;
     border-bottom: 1px solid #e6e6e6;
-    font-size: 16;
+    font-size: 16px;
     font-weight: bold;
     color: #333;
   }
