--- a/src/global.less
+++ b/src/global.less
@@ -11,6 +11,13 @@ body {
   content: '' !important;
 }
 
+.cardStyle{
+  padding: 20px 20px 10px;
+  box-shadow: #cecece 0 0 6px 0;
+  background-color: #fff;
+  margin-bottom: 10px;
+}
+
 .circle {
   display: 'inline-block';
   margin-right: 10px;
