医药知识库，以及知识元组件修改

--- a/src/pages/query/components/Concept/index.less
+++ b/src/pages/query/components/Concept/index.less
@@ -20,4 +20,12 @@
       }
     }
   }
+  .more{
+    color: #999;
+    display: flex;
+    justify-content: flex-end;
+    &:hover{
+      color: #1890ff;
+    }
+  }
 }
