--- a/src/pages/query/components/Medical/index.less
+++ b/src/pages/query/components/Medical/index.less
@@ -3,6 +3,11 @@
   margin-bottom: 20px;
   padding: 20px;
   background: #fff;
+  h2{
+    padding-bottom: 10px;
+    color: lightslategray;
+    font-size: 18px;
+  }
   .title {
     color: #2f8bd6;
     text-decoration: none;
