--- a/src/pages/query/index.less
+++ b/src/pages/query/index.less
@@ -5,7 +5,7 @@
   min-height: calc(100vh - 84px - 50px);
   .result_tips {
     padding-bottom: 10px;
-    // padding-left: 200px;
+    padding-left: 200px;
   }
   .topicList {
     .title {
