--- a/src/pages/query/components/NewHelp/index.less
+++ b/src/pages/query/components/NewHelp/index.less
@@ -20,10 +20,13 @@
       text-overflow: ellipsis;
       white-space: nowrap;
       font-size: 14px;
-      color: #333;
+      color: #666;
       font-weight: bold;
       display: block;
       width: 70%;
+      &:hover{
+        color: #1890ff;
+      }
     }
   }
 }
