更新知识元获取方式

--- a/src/global.less
+++ b/src/global.less
@@ -9,6 +9,11 @@ html {
   overflow-x: hidden;
 }
 
+h2{
+  padding-bottom: 10px;
+  color: lightslategray;
+  font-size: 18px;
+}
 
 body {
   margin: 0;
