--- a/src/pages/query/components/CommunityAnswer/index.less
+++ b/src/pages/query/components/CommunityAnswer/index.less
@@ -10,13 +10,15 @@
     display: inline-block;
   }
   .CommunityAnswer_answer{
-    color: #333;
+    color: rgba(0,0,0,.75);
     letter-spacing: 2px;
     line-height: 27.2px;
     text-indent: 2em;
+   
   }
   .CommunityAnswer_more{
     text-align: right;
     margin-top: 46px;
+    color: #999;
   }
 }
