--- a/src/pages/query/components/Concept/index.less
+++ b/src/pages/query/components/Concept/index.less
@@ -34,8 +34,15 @@
       
     }
     .source {
+      font-size: 13px;
       display: flex;
       justify-content: flex-end;
+      a{
+        color: #999;
+        &:hover{
+          color: #1890ff;
+        }
+      }
     }
   }
   .more {
