修复社区一部分bug，修改结果页组件样式

--- a/src/pages/query/components/SgList/index.less
+++ b/src/pages/query/components/SgList/index.less
@@ -1,16 +1,20 @@
 .SgList {
+  padding: 20px 20px;
+  background: #fff;
+  box-shadow: #cecece 0 0 6px 0;
   .wrapper {
-    box-shadow: #cecece 0 0 6px 0;
-    margin-bottom: 20px;
-    padding: 10px 20px;
+    // box-shadow: #cecece 0 0 6px 0;
+    // margin-bottom: 20px;
+    border-bottom: 1px solid #f0f0f0;
+    padding-bottom: 10px;
     background: #fff;
     word-break: break-all;
     word-wrap: break-word;
   }
-  :global(.ant-list-item){
+  :global(.ant-list-item) {
     padding: 6px 0;
   }
-  :global(.ant-list-footer){
+  :global(.ant-list-footer) {
     overflow: hidden;
     padding-bottom: 0;
     padding-top: 6px;
@@ -20,7 +24,7 @@
     letter-spacing: 2px;
     line-height: 27.2px;
     text-indent: 2em;
-    p{
+    p {
       margin: 0;
     }
   }
@@ -29,10 +33,10 @@
     text-align: right;
     cursor: pointer;
     // color: #999;
-    p{
+    p {
       margin: 0;
     }
-    &:hover{
+    &:hover {
       color: lightsalmon;
     }
   }
