--- a/src/pages/query/components/CommunityAnswer/index.less
+++ b/src/pages/query/components/CommunityAnswer/index.less
@@ -13,7 +13,7 @@
     color: rgba(0,0,0,.75);
     letter-spacing: 2px;
     line-height: 27.2px;
-    text-indent: 2em;
+    // text-indent: 2em;
    
   }
   .CommunityAnswer_more{
