--- a/src/pages/query/components/CommunityAnswer/index.less
+++ b/src/pages/query/components/CommunityAnswer/index.less
@@ -2,7 +2,7 @@
   padding: 20px 20px 10px;
   box-shadow: #cecece 0 0 6px 0;
   background-color: #fff;
-  margin-bottom: 10px;
+  margin-bottom: 20px;
   .CommunityAnswer_question{
     color: #2f8bd6;
     font-size: 16px;
@@ -13,7 +13,7 @@
     color: rgba(0,0,0,.75);
     letter-spacing: 2px;
     line-height: 27.2px;
-    // text-indent: 2em;
+    text-indent: 2em;
    
   }
   .CommunityAnswer_more{
