修改结果页样式布局，修改社区样式

--- a/src/layouts/BasicLayout.less
+++ b/src/layouts/BasicLayout.less
@@ -28,19 +28,17 @@
           width: auto;
         }
       }
+      .wrap {
+        position: absolute;
+        right: 41.6%;
+        overflow: hidden;
+        height: 100%;
+      }
       .logo {
         vertical-align: top;
         color: #fff;
         height: 38px;
-        // width: 175px;
-        left: calc(50% - 600px);
-        text-align: right;
-        margin-right: 10px;
-        background-size: contain;
-        cursor: pointer;
-        position: absolute;
-        top: 50%;
-        margin-top: -16px;
+        // padding-right: 10px;
         img {
           height: 100%;
           width: auto;
@@ -68,13 +66,9 @@
         }
       }
       .inputWrap {
-        float: left;
-        position: absolute;
-        left: calc(50% - 390px);
-        top: 50%;
-        margin-top: -20px;
-        width: 36%;
-
+        // width: 40%;
+        width: 600px;
+        margin-left: 10px;
         :global(.record-wrap) {
           width: calc(100% - 80px);
         }
