--- a/src/pages/query/index.less
+++ b/src/pages/query/index.less
@@ -1,11 +1,11 @@
 .result {
-  width: 1200px;
+  width: 1000px;
   margin: 0 auto;
   padding-top: 20px;
   min-height: calc(100vh - 84px - 50px);
   .result_tips {
     padding-bottom: 10px;
-    padding-left: 200px;
+    // padding-left: 40px;
   }
   .topicList {
     .title {
