--- a/src/pages/reply/index.less
+++ b/src/pages/reply/index.less
@@ -1,7 +1,7 @@
 .reply {
   padding-top: 20px;
   .content {
-    width: 1200px;
+    width: 1000px;
     margin: auto;
     .content_left {
       background: #fff;
@@ -10,7 +10,7 @@
     .title {
       font-size: 24px;
       font-weight: 600;
-      color: #1a1a1a;
+      color: #636363;
       padding: 10px 10px 20px;
     }
     .replyCount {
