--- a/src/pages/query/index.less
+++ b/src/pages/query/index.less
@@ -1,11 +1,11 @@
 .result {
-  width: 1200px;
+  width: 1000px;
   margin: 0 auto;
   padding-top: 20px;
   min-height: calc(100vh - 84px - 50px);
   .result_tips {
     padding-bottom: 10px;
-    padding-left: 200px;
+    // padding-left: 40px;
   }
   .topicList {
     .title {
@@ -28,6 +28,37 @@
       letter-spacing: 2px;
       &:hover{
         box-shadow: #0097ff 0px 1px 5px 0px;
+      }
+    }
+  }
+  .topicWrap{
+    margin-top: 20px;
+    :global(.ant-card-body){
+      padding: 10px 0px;
+    }
+    .item{
+      font-size: 10px;
+      font-weight: bold;
+      margin: 10px 0;
+      width: 25%;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      cursor: pointer;
+      &:hover{
+        transform: scale(1.2);
+      }
+      .imgWrap{
+        width: 48px;
+        height: 48px;
+        border-radius: 50%;
+        line-height: 48px;
+        text-align: center;
+        margin-bottom: 5px;
+        img{
+          width: 24px;
+          height: 24px;
+        }
       }
     }
   }
